--- a/SGL/html/ch02.html
+++ b/SGL/html/ch02.html
@@ -6,7 +6,7 @@ major platforms: Microsoft Windows, Apple macOS, and Linux.
 </p></div><div class="sect1"><div class="titlepage"><div><div><h2 class="title" style="clear: both"><a id="sec:installing.windows"></a>2.1. Installing on Microsoft Windows 10
 with Visual Studio 2017</h2></div></div></div><p>
 Visual Studio 2017 includes the OpenGL library, but it lacks 
-<a id="idp8685435488" class="indexterm"></a>
+<a id="idp8685437648" class="indexterm"></a>
 GLUT.
 The GLUT library is available from 
 <a class="ulink" href="http://www.xmission.com/~nate/glut.html" target="_top">
@@ -58,6 +58,20 @@ project properties as follows:
              </p></li></ol></div><p>
 
 </p><p>
+It is possible to compile SGL applications from the command line
+using Visual C++.  To do so, use the <span class="emphasis"><em>Developer Command 
+Prompt for Visual Studio</em></span> (open the
+<code class="varname">Start</code> menu and type <code class="varname">dev</code> to
+find it).  To simplify the build process, create the following batch
+file named <code class="varname">sglcc.bat</code>:
+</p><pre class="screen">
+cl /W4 /EHsc /nologo /std:c++latest %* /IC:\SGL\include \
+/link /LIBPATH:c:\SGL\lib glut32.lib
+copy c:\SGL\bin\glut32.dll .
+</pre><p>
+To build an SGL application named 
+<code class="varname">myapp.cpp</code>, type 
+</p><div class="blockquote"><blockquote class="blockquote"><code class="varname">sglcc myapp.cpp</code></blockquote></div><p>
 </p></div></div><hr xmlns="" /><table xmlns="" border="0" width="100%"><tr><td width="40%" align="left"><i>Copyright</i><font>  ©</font><i>2017 Richard L.
     Halterman</i></td><td width="20%" align="center"><font color="red">Version 0.9.0</font></td><td width="40%" align="right"><font color="red">October 15, 2017</font></td></tr></table><div class="navfooter"><hr /><table width="100%" summary="Navigation footer"><tr><td width="40%" align="left"><a accesskey="p" href="ch01s03.html">Prev</a> </td><td width="20%" align="center"> </td><td width="40%" align="right"> <a accesskey="n" href="ch02s02.html">Next</a></td></tr><tr><td width="40%" align="left" valign="top">1.3. SGL License </td><td width="20%" align="center"><a accesskey="h" href="index.html">Home</a> | <a accesskey="t" href="bk01-toc.html">ToC</a></td><td width="40%" align="right" valign="top"> 2.2. Installing on Apple Mac OS X</td></tr></table></div><div xmlns="" id="customfooter"><a href="http://creativecommons.org/licenses/by-sa/3.0/us/"><img alt="Creative Commons License" border="0" src="http://i.creativecommons.org/l/by-sa/3.0/us/88x31.png" /></a>
 	This work is licensed under a 
