Fixed numerous typos

--- a/SGL/html/ch01s02.html
+++ b/SGL/html/ch01s02.html
@@ -3,14 +3,14 @@
 The SGL library is aimed at students learning to write
 computer programs with C++.  It is appropriate for 
 university freshman in an introductory 
-programming couse designed for computer science majors, but
+programming course designed for computer science majors, but
 experienced C++ programmers wishing to add some graphics to their
 applications can use the SGL without the overhead of more
 complicated graphics packages.  The SGL, like GLUT, emphasizes 
 graphics, not
 graphical user interfaces, so programmers wishing to build a
 sophisticated GUI
-for their appication should consider other C++ graphics
+for their application should consider other C++ graphics
 libraries.
 </p><p>
 The SGL is distinguished from similar toolkits like
@@ -38,10 +38,10 @@ transition to the Java 2-D graphics development environment.
 In addition to its object-oriented API, the SGL library provides a 
 very simple procedural interface.  The procedural interface is not
 as powerful as the OO API, but it allows novice programmers who are
-familiar with functions but oblivious to objects to write simple
+familiar with functions, but oblivious to objects, to write simple
 graphical programs.
 </p></div><hr xmlns="" /><table xmlns="" border="0" width="100%"><tr><td width="40%" align="left"><i>Copyright</i><font>  ©</font><i>2019 Richard L.
-    Halterman</i></td><td width="20%" align="center"><font color="red">Version 0.9.1</font></td><td width="40%" align="right"><font color="red">February  3, 2019</font></td></tr></table><div class="navfooter"><hr /><table width="100%" summary="Navigation footer"><tr><td width="40%" align="left"><a accesskey="p" href="ch01.html">Prev</a> </td><td width="20%" align="center"><a accesskey="u" href="ch01.html">Up</a></td><td width="40%" align="right"> <a accesskey="n" href="ch01s03.html">Next</a></td></tr><tr><td width="40%" align="left" valign="top">Chapter 1. What is SGL? </td><td width="20%" align="center"><a accesskey="h" href="index.html">Home</a> | <a accesskey="t" href="bk01-toc.html">ToC</a></td><td width="40%" align="right" valign="top"> 1.3. SGL License</td></tr></table></div><div xmlns="" id="customfooter"><a href="http://creativecommons.org/licenses/by-sa/3.0/us/"><img alt="Creative Commons License" border="0" src="http://i.creativecommons.org/l/by-sa/3.0/us/88x31.png" /></a>
+    Halterman</i></td><td width="20%" align="center"><font color="red">Version 0.9.1</font></td><td width="40%" align="right"><font color="red">February  4, 2019</font></td></tr></table><div class="navfooter"><hr /><table width="100%" summary="Navigation footer"><tr><td width="40%" align="left"><a accesskey="p" href="ch01.html">Prev</a> </td><td width="20%" align="center"><a accesskey="u" href="ch01.html">Up</a></td><td width="40%" align="right"> <a accesskey="n" href="ch01s03.html">Next</a></td></tr><tr><td width="40%" align="left" valign="top">Chapter 1. What is SGL? </td><td width="20%" align="center"><a accesskey="h" href="index.html">Home</a> | <a accesskey="t" href="bk01-toc.html">ToC</a></td><td width="40%" align="right" valign="top"> 1.3. SGL License</td></tr></table></div><div xmlns="" id="customfooter"><a href="http://creativecommons.org/licenses/by-sa/3.0/us/"><img alt="Creative Commons License" border="0" src="http://i.creativecommons.org/l/by-sa/3.0/us/88x31.png" /></a>
 	This work is licensed under a 
         <a href="http://creativecommons.org/licenses/by-sa/3.0/us/">
         Creative Commons License</a>.
