--- a/SGL/html/ch01.html
+++ b/SGL/html/ch01.html
@@ -73,19 +73,19 @@ developing on
 an Apple Macintosh running macOS or on a PC running 
 Linux can compile and run
 their source code in a university lab running Visual C++ under
-Microsoft Windows, or vice-versa.  
+Microsoft Windows, or vice versa.  
 </p><p>
-It should be simple to write a simple program.  Creating an empty
+It should be easy to write a simple program.  Creating an empty
 window on the screen should not
 require 50 lines of source code.
-the SGL hides the details of OpenGL/GLUT code, providing a simpler
+The SGL hides the details of OpenGL/GLUT code, providing a simpler
 interface for application programmers.
 Even though SGL client code ordinarily is oblivious to GLUT, 
 an SGL client additionally 
 can include <code class="varname">GL/glut.h</code> and directly access all 
 the desired GLUT and OpenGL functionality.
 </p></div></div><hr xmlns="" /><table xmlns="" border="0" width="100%"><tr><td width="40%" align="left"><i>Copyright</i><font>  ©</font><i>2019 Richard L.
-    Halterman</i></td><td width="20%" align="center"><font color="red">Version 0.9.1</font></td><td width="40%" align="right"><font color="red">February  3, 2019</font></td></tr></table><div class="navfooter"><hr /><table width="100%" summary="Navigation footer"><tr><td width="40%" align="left"><a accesskey="p" href="index.html">Prev</a> </td><td width="20%" align="center"> </td><td width="40%" align="right"> <a accesskey="n" href="ch01s02.html">Next</a></td></tr><tr><td width="40%" align="left" valign="top">SGL: Simple Graphics Library </td><td width="20%" align="center"><a accesskey="h" href="index.html">Home</a> | <a accesskey="t" href="bk01-toc.html">ToC</a></td><td width="40%" align="right" valign="top"> 1.2. SGL Audience</td></tr></table></div><div xmlns="" id="customfooter"><a href="http://creativecommons.org/licenses/by-sa/3.0/us/"><img alt="Creative Commons License" border="0" src="http://i.creativecommons.org/l/by-sa/3.0/us/88x31.png" /></a>
+    Halterman</i></td><td width="20%" align="center"><font color="red">Version 0.9.1</font></td><td width="40%" align="right"><font color="red">February  4, 2019</font></td></tr></table><div class="navfooter"><hr /><table width="100%" summary="Navigation footer"><tr><td width="40%" align="left"><a accesskey="p" href="index.html">Prev</a> </td><td width="20%" align="center"> </td><td width="40%" align="right"> <a accesskey="n" href="ch01s02.html">Next</a></td></tr><tr><td width="40%" align="left" valign="top">SGL: Simple Graphics Library </td><td width="20%" align="center"><a accesskey="h" href="index.html">Home</a> | <a accesskey="t" href="bk01-toc.html">ToC</a></td><td width="40%" align="right" valign="top"> 1.2. SGL Audience</td></tr></table></div><div xmlns="" id="customfooter"><a href="http://creativecommons.org/licenses/by-sa/3.0/us/"><img alt="Creative Commons License" border="0" src="http://i.creativecommons.org/l/by-sa/3.0/us/88x31.png" /></a>
 	This work is licensed under a 
         <a href="http://creativecommons.org/licenses/by-sa/3.0/us/">
         Creative Commons License</a>.
